add navabar menu

--- a/index.html
+++ b/index.html
@@ -30,17 +30,7 @@
                 alt="logo"
               />
             </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto" style="z-index: 1">
                 <li class="nav-item">
@@ -69,6 +59,64 @@
                 </li>
               </ul>
             </div>
+            <div class="dropdown d-sm-block d-md-none">
+              <a
+                class="btn btn-secondary dropdown-toggle"
+                href="#"
+                role="button"
+                id="dropdownMenuLink"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </a>
+
+              <ul
+                class="dropdown-menu custom-dropdown dropdown-menu-end"
+                aria-labelledby="dropdownMenuLink"
+              >
+                <li>
+                  <a class="nav-link" href="/services.html">Services</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="/products.html">Products</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="/portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="/aboutus.html">About</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="/contactus.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- <div class="dropdown d-sm-block d-md-none">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="navbar-toggler-icon"></span>
+              </a>
+            
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li >
+                  <a class="nav-link" href="/services.html">Services</a>
+                </li>
+                <li >
+                  <a class="nav-link" href="/products.html">Products</a>
+                </li>
+                <li >
+                  <a class="nav-link" href="/portfolio.html">Portfolio</a>
+                </li>
+                <li >
+                  <a class="nav-link" href="/aboutus.html">About</a>
+                </li>
+                <li >
+                  <a class="nav-link" href="/contactus.html">Contact</a>
+                </li>
+               
+              </ul>
+            </div> -->
           </div>
         </nav>
 
